# ligen-cpp

crates/core/: Cargo.toml
crates/core/src/files/: cpp.rs  hpp.rs  mod.rs
crates/macro/: Cargo.toml
examples/counter/: Cargo.toml
examples/counter-cpp/src/: main.cpp
examples/counter/src/: lib.rs
