[package]
name    = "counter"
version = "0.1.0"
authors = ["Danilo Guanabara <danilo@sensorial.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib","staticlib"]

[dependencies]
ligen       = { path = "../../../ligen/crates/main" }
ligen-cmake = "0.1.2"
ligen-c     = { path = "../../../ligen-c/crates/main" }
ligen-cpp   = { path = "../../crates/main" }
